# odd-collector-gcp

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: linter.yaml  release-build.yaml  release_latest_tag.yaml
odd_collector_gcp/: __main__.py  errors.py  logger.py
odd_collector_gcp/adapters/bigquery_storage/: adapter.py  mapper.py
odd_collector_gcp/adapters/gcs/: utils.py
odd_collector_gcp/adapters/gcs/mapper/: bucket.py  column.py  dataset.py
odd_collector_gcp/adapters/gcs_delta/: client.py
odd_collector_gcp/domain/: dataset_config.py  plugin.py  to_data_entity.py
odd_collector_gcp/patches/: collector.py
tests/: test_bigquery_metadata.py
